ncc/testsuite/positive/bug-0816.n
module Program {
    Main() : void {
        def x = ((x, y), z) => (x, y, z);
        System.Console.WriteLine(x((1, 2), 3));
    }
}
/*
BEGIN-OUTPUT 
(1, 2, 3)
END-OUTPUT
*/