ncc/testsuite/negative/void-field.n
module M {
  public x : void; // E: field `M.x' has void type, which is not allowed

  public Main () : void // OK
  {
  }
}
